--- a/autoware_launch/package.xml
+++ b/autoware_launch/package.xml
@@ -4,7 +4,7 @@
   <version>0.1.0</version>
   <description>The autoware_launch package</description>
 
-  <maintainer email="yukihiro.saito@tier4.jp">Yukihiro Saito</maintainer>
+  <maintainer email="bso19a@fsu.edu">Yukihiro Saito</maintainer>
   <license>Apache License 2.0</license>
 
   <buildtool_depend>ament_cmake_auto</buildtool_depend>
