--- a/autoware_launch/config/system/component_state_monitor/topics.yaml
+++ b/autoware_launch/config/system/component_state_monitor/topics.yaml
@@ -1,5 +1,5 @@
 - module: map
-  mode: [online, logging_simulation, planning_simulation]
+  mode: [online, planning_simulation]  # [online, logging_simulation, planning_simulation]
   type: launch
   args:
     node_name_suffix: vector_map
@@ -12,12 +12,12 @@
     timeout: 0.0
 
 - module: map
-  mode: [online, logging_simulation]
+  mode: [online]  # [online, logging_simulation]
   type: launch
   args:
-    node_name_suffix: pointcloud_map
-    topic: /map/pointcloud_map
-    topic_type: sensor_msgs/msg/PointCloud2
+    node_name_suffix: map  # pointcloud_map
+    topic: /map  # /map/pointcloud_map
+    topic_type: nav_msgs/msg/OccupancyGrid  # sensor_msgs/msg/PointCloud2
     best_effort: false
     transient_local: true
     warn_rate: 0.0
@@ -25,85 +25,85 @@
     timeout: 0.0
 
 - module: localization
-  mode: [online, logging_simulation, planning_simulation]
+  mode: [online]  # [online, logging_simulation, planning_simulation]
   type: autonomous
   args:
-    node_name_suffix: initialpose3d
-    topic: /initialpose3d
-    topic_type: geometry_msgs/msg/PoseWithCovarianceStamped
+    node_name_suffix: twist_estimator_twist_with_covariance  # initialpose3d
+    topic: /localization/twist_estimator/twist_with_covariance  # /initialpose3d
+    topic_type: geometry_msgs/msg/TwistWithCovarianceStamped # geometry_msgs/msg/PoseWithCovarianceStamped
     best_effort: false
     transient_local: false
     warn_rate: 0.0
     error_rate: 0.0
     timeout: 0.0
 
-- module: localization
-  mode: [online, logging_simulation]
-  type: autonomous
-  args:
-    node_name_suffix: pose_twist_fusion_filter_pose
-    topic: /localization/pose_twist_fusion_filter/pose
-    topic_type: geometry_msgs/msg/PoseStamped
-    best_effort: false
-    transient_local: false
-    warn_rate: 5.0
-    error_rate: 1.0
-    timeout: 1.0
-
-- module: localization
-  mode: [online, logging_simulation]
-  type: autonomous
-  args:
-    node_name_suffix: pose_estimator_pose
-    topic: /localization/pose_estimator/pose_with_covariance
-    topic_type: geometry_msgs/msg/PoseWithCovarianceStamped
-    best_effort: false
-    transient_local: false
-    warn_rate: 5.0
-    error_rate: 1.0
-    timeout: 1.0
-
-- module: perception
-  mode: [online, logging_simulation]
-  type: launch
-  args:
-    node_name_suffix: obstacle_segmentation_pointcloud
-    topic: /perception/obstacle_segmentation/pointcloud
-    topic_type: sensor_msgs/msg/PointCloud2
-    best_effort: true
-    transient_local: false
-    warn_rate: 5.0
-    error_rate: 1.0
-    timeout: 1.0
-
-- module: perception
-  mode: [online, logging_simulation, planning_simulation]
-  type: autonomous
-  args:
-    node_name_suffix: object_recognition_objects
-    topic: /perception/object_recognition/objects
-    topic_type: autoware_auto_perception_msgs/msg/PredictedObjects
-    best_effort: false
-    transient_local: false
-    warn_rate: 5.0
-    error_rate: 1.0
-    timeout: 1.0
-
-- module: perception
-  mode: [online, logging_simulation]
-  type: autonomous
-  args:
-    node_name_suffix: traffic_light_recognition_traffic_signals
-    topic: /perception/traffic_light_recognition/traffic_signals
-    topic_type: autoware_perception_msgs/msg/TrafficSignalArray
-    best_effort: false
-    transient_local: false
-    warn_rate: 5.0
-    error_rate: 1.0
-    timeout: 1.0
+#- module: localization
+#  mode: [online, logging_simulation]
+#  type: autonomous
+#  args:
+#    node_name_suffix: pose_twist_fusion_filter_pose
+#    topic: /localization/pose_twist_fusion_filter/pose
+#    topic_type: geometry_msgs/msg/PoseStamped
+#    best_effort: false
+#    transient_local: false
+#    warn_rate: 5.0
+#    error_rate: 1.0
+#    timeout: 1.0
+#
+#- module: localization
+#  mode: [online, logging_simulation]
+#  type: autonomous
+#  args:
+#    node_name_suffix: pose_estimator_pose
+#    topic: /localization/pose_estimator/pose_with_covariance
+#    topic_type: geometry_msgs/msg/PoseWithCovarianceStamped
+#    best_effort: false
+#    transient_local: false
+#    warn_rate: 5.0
+#    error_rate: 1.0
+#    timeout: 1.0
+#
+#- module: perception
+#  mode: [online, logging_simulation]
+#  type: launch
+#  args:
+#    node_name_suffix: obstacle_segmentation_pointcloud
+#    topic: /perception/obstacle_segmentation/pointcloud
+#    topic_type: sensor_msgs/msg/PointCloud2
+#    best_effort: true
+#    transient_local: false
+#    warn_rate: 5.0
+#    error_rate: 1.0
+#    timeout: 1.0
+#
+#- module: perception
+#  mode: [online, logging_simulation, planning_simulation]
+#  type: autonomous
+#  args:
+#    node_name_suffix: object_recognition_objects
+#    topic: /perception/object_recognition/objects
+#    topic_type: autoware_auto_perception_msgs/msg/PredictedObjects
+#    best_effort: false
+#    transient_local: false
+#    warn_rate: 5.0
+#    error_rate: 1.0
+#    timeout: 1.0
+#
+#- module: perception
+#  mode: [online, logging_simulation]
+#  type: autonomous
+#  args:
+#    node_name_suffix: traffic_light_recognition_traffic_signals
+#    topic: /perception/traffic_light_recognition/traffic_signals
+#    topic_type: autoware_perception_msgs/msg/TrafficSignalArray
+#    best_effort: false
+#    transient_local: false
+#    warn_rate: 5.0
+#    error_rate: 1.0
+#    timeout: 1.0
 
 - module: planning
-  mode: [online, logging_simulation, planning_simulation]
+  mode: [online, planning_simulation]  # [online, logging_simulation, planning_simulation]
   type: autonomous
   args:
     node_name_suffix: mission_planning_route
@@ -116,20 +116,20 @@
     timeout: 0.0
 
 - module: planning
-  mode: [online, logging_simulation, planning_simulation]
+  mode: [online, planning_simulation]  # [online, logging_simulation, planning_simulation]
   type: autonomous
   args:
-    node_name_suffix: scenario_planning_trajectory
-    topic: /planning/scenario_planning/trajectory
+    node_name_suffix: racing_planner_trajectory  # scenario_planning_trajectory
+    topic: /planning/racing_planner/trajectory  # /planning/scenario_planning/trajectory
     topic_type: autoware_auto_planning_msgs/msg/Trajectory
     best_effort: false
-    transient_local: false
-    warn_rate: 5.0
-    error_rate: 1.0
-    timeout: 1.0
+    transient_local: true  # false
+    warn_rate: 0.0  # 5.0
+    error_rate: 0.0  # 1.0
+    timeout: 0.0  # 1.0
 
 - module: control
-  mode: [online, logging_simulation, planning_simulation]
+  mode: [online, planning_simulation] # [online, logging_simulation, planning_simulation]
   type: autonomous
   args:
     node_name_suffix: trajectory_follower_control_cmd
@@ -142,7 +142,7 @@
     timeout: 1.0
 
 - module: control
-  mode: [online, logging_simulation, planning_simulation]
+  mode: [online, planning_simulation] # [online, logging_simulation, planning_simulation]
   type: autonomous
   args:
     node_name_suffix: control_command_control_cmd
@@ -155,7 +155,7 @@
     timeout: 1.0
 
 - module: vehicle
-  mode: [online, logging_simulation, planning_simulation]
+  mode: [online,  planning_simulation]  # [online, logging_simulation, planning_simulation]
   type: autonomous
   args:
     node_name_suffix: vehicle_status_velocity_status
@@ -168,7 +168,7 @@
     timeout: 1.0
 
 - module: vehicle
-  mode: [online, logging_simulation, planning_simulation]
+  mode: [online, logging_simulation, planning_simulation]  # [online, logging_simulation, planning_simulation]
   type: autonomous
   args:
     node_name_suffix: vehicle_status_steering_status
@@ -180,18 +180,18 @@
     error_rate: 1.0
     timeout: 1.0
 
-- module: system
-  mode: [online, logging_simulation, planning_simulation]
-  type: launch
-  args:
-    node_name_suffix: system_emergency_control_cmd
-    topic: /system/emergency/control_cmd
-    topic_type: autoware_auto_control_msgs/msg/AckermannControlCommand
-    best_effort: false
-    transient_local: false
-    warn_rate: 5.0
-    error_rate: 1.0
-    timeout: 1.0
+#- module: system
+#  mode: [online, logging_simulation, planning_simulation]
+#  type: launch
+#  args:
+#    node_name_suffix: system_emergency_control_cmd
+#    topic: /system/emergency/control_cmd
+#    topic_type: autoware_auto_control_msgs/msg/AckermannControlCommand
+#    best_effort: false
+#    transient_local: false
+#    warn_rate: 5.0
+#    error_rate: 1.0
+#    timeout: 1.0
 
 - module: localization
   mode: [online, logging_simulation, planning_simulation]
