--- a/autoware_launch/config/system/system_error_monitor/system_error_monitor.planning_simulation.param.yaml
+++ b/autoware_launch/config/system/system_error_monitor/system_error_monitor.planning_simulation.param.yaml
@@ -18,28 +18,29 @@
     required_modules:
       autonomous_driving:
         /autoware/control/autonomous_driving/node_alive_monitoring: default
-        /autoware/control/autonomous_driving/performance_monitoring/lane_departure: default
-        /autoware/control/autonomous_driving/performance_monitoring/trajectory_deviation: default
+        #/autoware/control/autonomous_driving/performance_monitoring/lane_departure: default
+        #/autoware/control/autonomous_driving/performance_monitoring/trajectory_deviation: default
         /autoware/control/control_command_gate/node_alive_monitoring: default
 
-        /autoware/localization/node_alive_monitoring: default
+        # /autoware/localization/node_alive_monitoring: default
         # /autoware/localization/performance_monitoring/matching_score: { sf_at: "warn", lf_at: "none", spf_at: "none" }
         # /autoware/localization/performance_monitoring/localization_error_ellipse: default
+        # /autoware/localization/performance_monitoring/localization_accuracy: default
 
         /autoware/map/node_alive_monitoring: default
 
-        /autoware/perception/node_alive_monitoring: default
+        # /autoware/perception/node_alive_monitoring: default
 
         /autoware/planning/node_alive_monitoring: default
-        /autoware/planning/performance_monitoring/trajectory_validation: default
+        # /autoware/planning/performance_monitoring/trajectory_validation: default
 
         # /autoware/sensing/node_alive_monitoring: default
 
-        /autoware/system/node_alive_monitoring: default
+        # /autoware/system/node_alive_monitoring: default
         /autoware/system/emergency_stop_operation: default
         /autoware/system/service_log_checker: { sf_at: "warn", lf_at: "none", spf_at: "none" }
         # /autoware/system/resource_monitoring: { sf_at: "warn", lf_at: "error", spf_at: "none" }
-        /autoware/system/duplicated_node_checker: default
+        #/autoware/system/duplicated_node_checker: default
 
         /autoware/vehicle/node_alive_monitoring: default
 
@@ -47,7 +48,7 @@
         /autoware/control/control_command_gate/node_alive_monitoring: default
         /autoware/control/external_control/external_command_selector/node_alive_monitoring: default
 
-        /autoware/system/node_alive_monitoring: default
+        # /autoware/system/node_alive_monitoring: default
         /autoware/system/emergency_stop_operation: default
         /autoware/system/service_log_checker: { sf_at: "warn", lf_at: "none", spf_at: "none" }
 
