--- a/autoware_launch/package.xml
+++ b/autoware_launch/package.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0"?>
 <package format="3">
   <name>autoware_launch</name>
-  <version>0.1.0</version>
+  <version>0.38.0</version>
   <description>The autoware_launch package</description>
 
   <maintainer email="bso19a@fsu.edu">Yukihiro Saito</maintainer>
+  <maintainer email="yukihiro.saito@tier4.jp">Yukihiro Saito</maintainer>
+  <maintainer email="ryohsuke.mitsudome@tier4.jp">Ryohsuke Mitsudome</maintainer>
+  <maintainer email="mfc@leodrive.ai">M. Fatih Cırıt</maintainer>
   <license>Apache License 2.0</license>
 
   <buildtool_depend>ament_cmake_auto</buildtool_depend>
